Proper implementation of AddDoubleClickCallback

I tracked it down to
http://cvsweb.xfree86.org/cvsweb/xc/programs/xedit/commands.c?rev=1.5&content-type=text/vnd.viewcvs-markup
After my patches to libXaw. Instead of checking for
"if (XtIsSubclass(w, asciiSrcObjectClass)) {" it should really
do something like "if (isXaw7orNewer) {". But I believe only XFree86
and Xorg versions of Xaw have the XawVersion macro in XawInit.h...

  This corrects the problem described in
http://bugs.freedesktop.org/show_bug.cgi?id=17726

  And the main reason is that xedit always default'ed to use a 8 bits
iso8859-x locale, while in Xorg it was modified to use multibyte by
default.